--- a/src/components/Location/styles.module.scss
+++ b/src/components/Location/styles.module.scss
@@ -27,7 +27,7 @@
         }
 
         img {
-            z-index: 3;
+            z-index: 2;
             @media (max-width: 720px) {
                 display: none;
             }
@@ -42,7 +42,10 @@
 
     .map {
         margin-top: -50px;
-        z-index: 2;
+
+        @media (max-width: 720px) {
+            margin-top: 0;
+        }
     }
 
     @media (max-width: 720px) {
