--- a/src/components/Carousel/blueprint.module.scss
+++ b/src/components/Carousel/blueprint.module.scss
@@ -34,6 +34,10 @@
                                 height: 200px;
                             }
                         }
+
+                        p {
+                            margin-left: 15px;
+                        }
                     }
                 }
             }
