--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -76,6 +76,10 @@
 
             img {
                 margin-bottom: 25px;
+
+                @media (max-width: 720px) {
+                    width: 70%;
+                }
             }
 
             button {
