--- a/src/components/PlantaBaixa/styles.module.scss
+++ b/src/components/PlantaBaixa/styles.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 100px 0;
+    padding: 100px 0 50px 0;
 
     h1 {
         font-size: 36px;
