troca das imagens de interior

--- a/src/components/AboutSection/styles.module.scss
+++ b/src/components/AboutSection/styles.module.scss
@@ -73,6 +73,9 @@
         justify-content: center;
 
         #interior {
+            width: 800px;
+            height: 500px;
+
             @media (max-width: 720px) {
                 width: 100%;
                 height: 220px;
