troca das imagens e textos de acordo com demandas da emi + ajustes design da iggie

--- a/src/components/InteriorShots/styles.module.scss
+++ b/src/components/InteriorShots/styles.module.scss
@@ -4,4 +4,10 @@
     display: flex;
     justify-content: center;
     padding: 100px 0;
+
+    @media(max-width: 720px){
+        background: var(--white);
+        padding: 0;
+        padding-top: 20px;
+    }
 }
