--- a/src/components/AboutSection/styles.module.scss
+++ b/src/components/AboutSection/styles.module.scss
@@ -72,7 +72,7 @@
         display: flex;
         justify-content: center;
 
-        #interior {
+        #exterior{
             width: 800px;
             height: 500px;
 
