--- a/src/components/Carousel/blueprint.module.scss
+++ b/src/components/Carousel/blueprint.module.scss
@@ -64,10 +64,24 @@
         margin-top: 20px;
         align-items: center;
 
-        .responsiveArrow {
+        .dashes {
+            display: flex;
+
+            @media (max-width: 720px) {
+                display: none;
+            }
+        }
+
+        .dots {
+            display: flex;
+
             @media (min-width: 720px) {
                 display: none;
             }
+        }
+
+        .responsiveArrow {
+            display: none;
         }
     }
 }
