--- a/src/components/Carousel/interior.module.scss
+++ b/src/components/Carousel/interior.module.scss
@@ -11,7 +11,7 @@
         max-width: 1520px;
     
         .content {
-            max-width: 850px;
+            max-width: 1100px;
             display: flex;
             justify-content: center;
     
@@ -26,11 +26,14 @@
                     .embla__slide {
                         position: relative;
                         flex: 0 0 100%;
+                        text-align: center;
         
                         img {
+                            width: 80%;
+
                             @media (max-width: 720px) {
-                                width: 367px;
-                                height: 206px;
+                                width: 100%;
+                                height: 200px;
                             }
                         }
                     }
@@ -38,7 +41,7 @@
             }
 
             @media (max-width: 720px) {
-                max-width: 367px;
+                max-width: 100%;
                 margin: 0;
             }
         }
@@ -59,10 +62,24 @@
         margin-top: 20px;
         align-items: center;
 
-        .responsiveArrow {
+        .dashes {
+            display: flex;
+
+            @media (max-width: 720px) {
+                display: none;
+            }
+        }
+
+        .dots {
+            display: flex;
+
             @media (min-width: 720px) {
                 display: none;
             }
+        }
+
+        .responsiveArrow {
+            display: none;
         }
     }
 }
