--- a/src/components/AboutSection/styles.module.scss
+++ b/src/components/AboutSection/styles.module.scss
@@ -192,3 +192,17 @@
         background: var(--white)
     }
 }
+
+.sideDash {
+    position: absolute;
+    top: 1150px;
+    left: 130px;
+
+    background-color: var(--gray-700);
+    width: 1px;
+    height: 674px;
+
+    @media (max-width: 1500px) {
+        display: none;
+    }
+}
