--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -109,4 +109,32 @@
     @media (max-width: 720px) {
         overflow-x: hidden;
     }
+
+    .sideDash1 {
+        position: absolute;
+        top: 3000px;
+        right: 130px;
+    
+        background-color: var(--gray-700);
+        width: 1px;
+        height: 416px;
+    
+        @media (max-width: 1500px) {
+            display: none;
+        }
+    }
+
+    .sideDash2 {
+        position: absolute;
+        top: 3900px;
+        left: 130px;
+    
+        background-color: var(--gray-700);
+        width: 1px;
+        height: 416px;
+    
+        @media (max-width: 1500px) {
+            display: none;
+        }
+    }
 }
