--- a/src/components/Carousel/interior.module.scss
+++ b/src/components/Carousel/interior.module.scss
@@ -32,7 +32,7 @@
                             width: 80%;
 
                             @media (max-width: 720px) {
-                                width: 100%;
+                                width: 1100px;
                                 height: 200px;
                             }
                         }
