--- a/src/components/AboutSection/styles.module.scss
+++ b/src/components/AboutSection/styles.module.scss
@@ -43,6 +43,7 @@
             h2 {
                 margin-top: 36px;
                 text-align: center;
+                align-self: center;
 
                 font-weight: normal;
                 font-size: 1.5rem;
