--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -27,12 +27,14 @@
                 background: transparent;
                 outline: none;
                 border: none;
+
+                color: var(--gray-400);
             
                 transition: filter 0.2s;
             }
 
-            & a:hover {
-                filter: brightness(0.8)
+            & button:hover {
+                filter: brightness(1.5)
             }
         }
 
