--- a/src/components/Carousel/interior.module.scss
+++ b/src/components/Carousel/interior.module.scss
@@ -35,6 +35,12 @@
                                 width: 100%;
                             }
                         }
+
+                        p {
+                            margin-top: 20px;
+                            font-size: 24px;
+                            color: var(--gray-700);
+                        }
                     }
                 }
             }
