--- a/src/components/VirtualTour/styles.module.scss
+++ b/src/components/VirtualTour/styles.module.scss
@@ -25,4 +25,13 @@
         border: none;
         outline: none;
     }
+
+    p {
+        font-size: 24px;
+        font-weight: 400;
+        
+        margin-bottom: 50px;
+
+        color: var(--gray-700);
+    }
 }
